# qontract-schemas

./: .gitignore  .tool-versions  .yamllint  AGENTS.md  Dockerfile  Makefile  README.md  build_deploy.sh  pr_check.sh  pyproject.toml  tox.ini
.github/workflows/: deploy-docs.yml
.tekton/: qontract-schemas-main-pull-request.yaml  qontract-schemas-main-push.yaml
dockerfiles/: Dockerfile.test
docs/: index.html  schemas.json  styles.css
graphql-schemas/: schema.yml
schemas/: common-1.json  json-schema-spec-draft-06.json  metaschema-1.json
schemas/access/: bot-1.yml  external-user-1.yml  membership-provider-1.yml  oidc-permission-1.yml  permission-1.yml  quay-robot-1.yml  role-1.yml  user-1.yml  vault-permission-1.yml
schemas/acs/: acs-policy-1.yml  acs-policy-condition-1.yml
schemas/app-interface/: app-interface-email-1.yml  app-interface-settings-1.yml  app-interface-slack-notification-1.yml  app-interface-sql-query-1.yml  change-type-1.yml  credentials-request-1.yml  database-access-1.yml  deletion-approval-1.yml  graphql-schemas-1.yml  prometheus-rule-test-1.yml  query-validation-1.yml  resource-template-test-1.yml  self-service-config-1.yml  template-1.yml  template-collection-1.yml  template-test-1.yml
schemas/app-sre/: app-1.yml  app-changelog-1.yml  app-quay-repos.yml  automated-action-1.yml  automated-action-argument-1.yml  automated-actions-instance-1.yml  contract-1.yml  contract-version-1.yml  document-1.yml  report-1.yml  (+28 more)
scripts/: README.md  generate_schema_docs.py
test/: conftest.py  test_schema_docs_generator.py  test_sql_regexp.py  utils.py
(+147 files in other folders)
